--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ repository               : "sballs9/sballs.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Sam_Balls.jpeg"
+  avatar           : "/images/Sam_Balls.jpeg"
   name             : "Sam Balls"
   bio              : "Aspiring PhD Student"
   location         : "Provo, UT"
