--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   # url: /year-archive/
     
   - title: "CV"
-    url: /files/Samuel_K_Balls_CV.pdf
+    url: "/files/Samuel_K_Balls_CV.pdf"
 
     
   - title: "Research"
