--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,10 +19,10 @@ main:
         
   # - title: "Blog Posts"
   # url: /year-archive/
+
+  - title: "Research"
+    url: /research/
     
   - title: "CV"
     url: "/files/Samuel_K_Balls_CV.pdf"
 
-    
-  - title: "Research"
-    url: /research
