--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ author:
   # Biographic information
   avatar           : "Sam_Balls.png"
   name             : "Sam Balls"
-  bio              : "Aspiring PhD Student"
+  bio              : "Incoming Statistics PhD Student at UT Austin"
   location         : "Provo, UT"
-  employer         : "Brigham Young University"
+  employer         : "Brigham Young University" 
   uri              : # URL
   email            : "21samballs@gmail.com" 
 
