--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   # Biographic information
   avatar           : "Sam_Balls.png"
   name             : "Sam Balls"
-  bio              : "Incoming Statistics PhD Student at UT Austin"
+  bio              : "Incoming PhD Student at UT Austin"
   location         : "Provo, UT"
   employer         : "Brigham Young University" 
   uri              : # URL
