--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ author:
   # Biographic information
   avatar           : "Sam_Balls.png"
   name             : "Sam Balls"
-  bio              : "Incoming PhD Student at UT Austin"
-  location         : "Provo, UT"
-  employer         : "Brigham Young University" 
+  bio              : "1st Year PhD Student at UT Austin"
+  location         : "Austin, TX"
+  employer         : "The University of Texas at Austin" 
   uri              : # URL
   email            : "21samballs@gmail.com" 
 
