--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Samuel K. Balls"
+title                    : "Samuel K. Wells"
 url                      : "https://sballs9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sballs9/sballs.github.io"
@@ -19,7 +19,7 @@ repository               : "sballs9/sballs.github.io"
 author:
   # Biographic information
   avatar           : "Sam_Balls.png"
-  name             : "Sam Balls"
+  name             : "Sam Wells"
   bio              : "1st Year PhD Student at UT Austin"
   location         : "Austin, TX"
   employer         : "The University of Texas at Austin" 
@@ -39,7 +39,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "sballs9"
+  github           : "samwells9"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
