--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "Samuel K. Wells"
-url                      : "https://sballs9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://samwells9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "sballs9/sballs.github.io"
+repository               : "samwells9/samwells.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
