--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,11 +21,11 @@ main:
   # url: /year-archive/
 
   - title: "Research"
-    url: https://sballs9.github.io/research/
+    url: https://samwells9.github.io/research/
     
   - title: "CV"
     url: "/files/Samuel_K_Balls_CV.pdf"
 
   - title: "Blog"
-    url: https://sballs9.github.io/blog/
+    url: https://samwells9.github.io/blog/
 
