--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   location         : "Austin, TX"
   employer         : "The University of Texas at Austin" 
   uri              : # URL
-  email            : "21samballs@gmail.com" 
+  email            : "samuelkwells9@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -53,7 +53,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/samuel-balls/"
+  linkedin         : "https://www.linkedin.com/in/samuel-wells/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
