--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "linkedin.com/in/samuel-k-wells/"
+  linkedin         : "samuel-k-wells"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
