Update CV URL in navigation file

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
     url: https://samwells9.github.io/research/
     
   - title: "CV"
-    url: "/files/Samuel_K_Wells_CV.pdf"
+    url: "/files/SamuelWellsCV.pdf"
 
   - title: "Blog"
     url: https://samwells9.github.io/blog/
